--- a/rs-shop-app/src/app/core/header/info/contacts/contacts.component.html
+++ b/rs-shop-app/src/app/core/header/info/contacts/contacts.component.html
@@ -43,6 +43,8 @@
 			Еще
 		</button>
 		<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+			<li class="tel-show"><a class="dropdown-item" href="tel:+74951234567">+375 29 302 10 21</a>
+			</li>
 			<li><a class="dropdown-item" href="tel:+375255021021">+375 25 502 10 21</a></li>
 			<li><a class="dropdown-item" href="tel:+375173021021">+375 17 302 10 21</a></li>
 			<li><a class="dropdown-item" href="#">Telegram</a></li>
