--- a/rs-shop-app/src/app/core/header/info/contacts/contacts.component.scss
+++ b/rs-shop-app/src/app/core/header/info/contacts/contacts.component.scss
@@ -27,6 +27,10 @@
       width: 200px;
 
       font-size: 14px;
+
+      .tel-show {
+        display: none;
+      }
     }
 
     .dropdown-toggle {
