--- a/rs-shop-app/src/app/core/header/header.component.html
+++ b/rs-shop-app/src/app/core/header/header.component.html
@@ -1,26 +1,31 @@
 <header class="header">
-  <div class="header-inner">
-    <app-location></app-location>
+  <div class="shadow-box">
+    <div class="header-info header-inner">
+      <app-location></app-location>
 
-    <div class="save-place"></div>
-    <div class="payment">
-      <span class="payment-item">Оплата частями</span>
-      <span class="payment-item">Бонусная программа</span>
+      <div class="save-place"></div>
+      <div class="payment">
+        <span class="payment-item">Оплата частями</span>
+        <span class="payment-item">Бонусная программа</span>
 
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-          data-bs-toggle="dropdown" aria-expanded="false">
-          Еще
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="#">Оплата</a></li>
-          <li><a class="dropdown-item" href="#">Доставка</a></li>
-          <li><a class="dropdown-item" href="#">Самовывоз</a></li>
-        </ul>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Еще
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="#">Оплата</a></li>
+            <li><a class="dropdown-item" href="#">Доставка</a></li>
+            <li><a class="dropdown-item" href="#">Самовывоз</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
 
-    <app-contacts class="header-item"></app-contacts>
-    <app-time class="header-item"></app-time>
+      <app-contacts class="header-item"></app-contacts>
+      <app-time class="header-item"></app-time>
+    </div>
+  </div>
+  <div class="header-nav header-inner">
+    <app-nav></app-nav>
   </div>
 </header>
