feat: add catalog

--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.html
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="logo">
     здесь будет лого
   </div>
-  <div class="catalog">
+  <div class="catalog" [routerLink]="['/catalog']">
     <div class="logo">
       <svg id="Filled" height="27px" viewBox="0 0 512 512" width="27px" xmlns="http://www.w3.org/2000/svg">
         <path d="m296 472h-272l16-320h240z" fill="#eb423f" />
