--- a/rs-shop-app/src/app/core/header/components/pages/header-template/header-template.component.scss
+++ b/rs-shop-app/src/app/core/header/components/pages/header-template/header-template.component.scss
@@ -1,5 +1,7 @@
 .header {
   position: relative;
+  box-shadow: 1px 2px 4px #efe9e9;
+  background: linear-gradient(to bottom, rgb(247, 164, 40), rgb(251, 253, 108));
 
   .shadow-box {
     box-shadow: 1px 1px 1px rgb(236, 235, 235);
