feat: add goods sorting

--- a/rs-shop-app/src/app/goods/components/goods-page/goods-page.component.html
+++ b/rs-shop-app/src/app/goods/components/goods-page/goods-page.component.html
@@ -1,3 +1,4 @@
+<app-sort></app-sort>
 <div class="goods-cont">
   <!-- <div class="good-cont" *ngFor="let item of goods$|async"> {{item | json}}</div> -->
   <div class="good-cont" *ngFor="let item of goods$|async">
