refactor: change styles

--- a/rs-shop-app/src/app/goods/components/goods-page/goods-page.component.scss
+++ b/rs-shop-app/src/app/goods/components/goods-page/goods-page.component.scss
@@ -21,6 +21,9 @@
       cursor: pointer;
 
       img {
+        max-width: 100%;
+        width: auto;
+        height: auto;
         max-height: 160px;
       }
     }
