--- a/rs-shop-app/src/app/goods/components/goods-details/goods-details.component.scss
+++ b/rs-shop-app/src/app/goods/components/goods-details/goods-details.component.scss
@@ -30,25 +30,33 @@
 
   .slider-cont {
     position: relative;
-    margin-top: 60px;
+    margin: 60px 0 100px 0;
 
     display: flex;
 
     .images-cont {
-      width: 15%;
+      width: 13%;
+
+      overflow-y: auto;
+      max-height: 310px;
 
       .image {
-        margin-bottom: 20px;
+        width: 100%;
+        height: 130px;
+        margin-bottom: 10px;
         // background: linear-gradient(to right, black, gray);
-        background: linear-gradient(to right, red, rgb(255, 217, 0));
+        // background: linear-gradient(to right, red, rgb(255, 217, 0));
+        border: 5px groove rgb(255, 166, 0);
         padding: 4px 5%;
 
         cursor: pointer;
+        text-align: center;
 
         img {
-          width: 100%;
+          max-width: 100%;
+          width: auto;
           height: auto;
-          max-height: 130px;
+          max-height: 110px;
 
           display: inline-block;
         }
@@ -59,9 +67,10 @@
       position: relative;
       width: 50%;
       // min-height: 50vh;
-      height: 50%;
+      height: 310px;
       margin: 0 0 0 9%;
       padding: 25px;
+      vertical-align: middle;
 
       box-shadow: 0 0 5px rgb(211, 209, 209);
       .carousel-inner {
