--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.scss
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.scss
@@ -1,72 +1,78 @@
-.nav {
-  display: flex;
-  justify-content: space-between;
+.nav-cont {
+  width: 100%;
 
-  .logo {
-    width: 15%;
-    height: 50px;
-  }
+  // border-bottom: 2px solid white;
 
-  .catalog {
-    padding: 0px 10px;
-    transition: 0.3s;
-
-    font-size: 15px;
-  }
-
-  .search-field {
-    position: relative;
-    width: 40%;
-  }
-
-  .account {
-    button {
-      background: none;
-      &::after {
-        margin-top: 16px;
-      }
-
-      &:active,
-      &:focus {
-        outline: none;
-        box-shadow: none;
-      }
-
-      &:hover,
-      &.show {
-        border: 2px solid rgb(255, 94, 0);
-        color: rgb(255, 51, 0);
-      }
-    }
-  }
-
-  .basket,
-  .account button,
-  .catalog {
-    height: 40px;
-
+  .nav {
     display: flex;
-    border-radius: 30px;
-
-    color: rgb(34, 33, 33);
-
-    border: 2px solid rgb(202, 202, 202);
-
-    padding: 0 10px;
+    justify-content: space-between;
 
     .logo {
-      padding-top: 3px;
-      margin-right: 10px;
-    }
-    .name {
-      padding-top: 5px;
+      width: 15%;
+      height: 50px;
     }
 
-    &:hover {
-      cursor: pointer;
-      border: 2px solid rgb(255, 94, 0);
+    .catalog {
+      padding: 0px 10px;
+      transition: 0.3s;
+
+      font-size: 15px;
+    }
+
+    .search-field {
+      position: relative;
+      width: 40%;
+    }
+
+    .account {
+      button {
+        background: none;
+        &::after {
+          margin-top: 16px;
+        }
+
+        &:active,
+        &:focus {
+          outline: none;
+          box-shadow: none;
+        }
+
+        &:hover,
+        &.show {
+          border: 2px solid rgb(255, 94, 0);
+          color: rgb(255, 51, 0);
+        }
+      }
+    }
+
+    .basket,
+    .account button,
+    .catalog {
+      height: 40px;
+
+      display: flex;
+      border-radius: 30px;
+
+      color: rgb(34, 33, 33);
+
+      border: 2px solid rgb(202, 202, 202);
+
+      padding: 0 10px;
+
+      .logo {
+        padding-top: 3px;
+        margin-right: 10px;
+      }
       .name {
-        color: rgb(255, 51, 0);
+        padding-top: 5px;
+      }
+
+      &:hover {
+        cursor: pointer;
+        border: 2px solid rgb(255, 94, 0);
+        .name {
+          color: rgb(255, 51, 0);
+        }
       }
     }
   }
