--- a/rs-shop-app/src/app/core/header/components/pages/header-template/header-template.component.scss
+++ b/rs-shop-app/src/app/core/header/components/pages/header-template/header-template.component.scss
@@ -13,7 +13,8 @@
     min-width: 500px;
     max-width: 1200px;
 
-    margin: 0 auto 13px auto;
+    margin: 0 auto;
+    padding: 15px 0;
   }
 
   .header-info {
