--- a/rs-shop-app/src/app/goods/components/goods-details/goods-details.component.scss
+++ b/rs-shop-app/src/app/goods/components/goods-details/goods-details.component.scss
@@ -73,6 +73,23 @@
       vertical-align: middle;
 
       box-shadow: 0 0 5px rgb(211, 209, 209);
+
+      .sales {
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        .st0 {
+          fill-rule: evenodd;
+          clip-rule: evenodd;
+          fill: #fdb913;
+        }
+
+        .st1 {
+          fill: none;
+        }
+      }
+
       .carousel-inner {
         width: 80%;
         margin: 0 auto;
