feat: start user auth

--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.html
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.html
@@ -35,7 +35,7 @@
         <span class="name">Аккаунт</span>
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <li class="tel-show"><a class="dropdown-item" href="#">тут будет форма логина</a>
+        <app-login></app-login>
       </ul>
     </div>
 
