--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.scss
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.scss
@@ -45,6 +45,11 @@
       }
     }
 
+    .dropdown-menu {
+      width: 250px;
+      height: 300px;
+    }
+
     .basket,
     .account button,
     .catalog {
