feat: add meadias

--- a/rs-shop-app/src/app/core/header/components/pages/header-template/header-template.component.html
+++ b/rs-shop-app/src/app/core/header/components/pages/header-template/header-template.component.html
@@ -5,8 +5,8 @@
 
       <div class="save-place"></div>
       <div class="payment">
-        <span class="payment-item">Оплата частями</span>
-        <span class="payment-item">Бонусная программа</span>
+        <span class="payment-item hide-payment2">Оплата частями</span>
+        <span class="payment-item hide-payment">Бонусная программа</span>
 
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
@@ -14,6 +14,8 @@
             Еще
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item show-payment2" href="#">Оплата частями</a></li>
+            <li><a class="dropdown-item show-payment" href="#">Бонусная программа</a></li>
             <li><a class="dropdown-item" href="#">Оплата</a></li>
             <li><a class="dropdown-item" href="#">Доставка</a></li>
             <li><a class="dropdown-item" href="#">Самовывоз</a></li>
