--- a/rs-shop-app/src/app/core/header/components/categories-nav/categories-nav.component.scss
+++ b/rs-shop-app/src/app/core/header/components/categories-nav/categories-nav.component.scss
@@ -3,6 +3,8 @@
   background: linear-gradient(to bottom, rgb(255, 81, 0), rgb(255, 174, 0));
   .categories {
     width: 70%;
+    min-width: 490px;
+    overflow-x: auto;
     margin: 0 auto 10px auto;
     padding: 15px 0;
 
@@ -25,5 +27,11 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 1180px) {
+  .categories {
+    overflow-x: scroll !important;
   }
 }
