--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.html
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.html
@@ -3,7 +3,7 @@
     <div class="logo">
       здесь будет лого
     </div>
-    <div class="catalog" [routerLink]="['/catalog']">
+    <div class="catalog nav-item" [routerLink]="['/catalog']">
       <div class="logo">
         <svg id="Filled" height="27px" viewBox="0 0 512 512" width="27px" xmlns="http://www.w3.org/2000/svg">
           <path d="m296 472h-272l16-320h240z" fill="#eb423f" />
@@ -22,7 +22,7 @@
 
     <app-search-field class="search-field"></app-search-field>
 
-    <div class="dropdown account">
+    <div class="dropdown account nav-item">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
         aria-expanded="false">
         <div class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 24 24" fill="none"
@@ -39,7 +39,7 @@
       </ul>
     </div>
 
-    <div class="basket">
+    <div class="basket nav-item">
       <div class="logo">
         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="20px" height="20px" viewBox="0 0 485.213 485.212"
