--- a/rs-shop-app/src/app/goods/components/goods-catalog/goods-catalog.component.scss
+++ b/rs-shop-app/src/app/goods/components/goods-catalog/goods-catalog.component.scss
@@ -1,11 +1,13 @@
 .catalog {
   width: 80%;
+  min-width: 480px;
 
   margin: 50px auto;
   display: flex;
 
   .catalog-category {
     width: 25%;
+    min-width: 150px;
     border-right: 1px solid rgb(224, 224, 224);
 
     .catalog-category-item {
@@ -45,5 +47,15 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .catalog-category-item {
+    height: 70px !important;
+    padding: 20px 5% !important;
+  }
+  .catalog-subcategories-cont {
+    grid-template-columns: repeat(1, 1fr) !important;
   }
 }
