--- a/rs-shop-app/src/app/auth/components/login/login.component.html
+++ b/rs-shop-app/src/app/auth/components/login/login.component.html
@@ -15,7 +15,7 @@
 <ng-template #logged>
   <div class="user-cont">
     <img src="https://okeygeek.ru/wp-content/uploads/2020/03/no_avatar.png" alt="avatar" class="avatar">
-    <h3 class="title">{{user.firstname}} {{user.lastname}}</h3>
+    <h3 class="title">{{user.firstName}} {{user.lastName}}</h3>
     <button class="btn btn-primary logout-btn" (click)="logoutFunc()">Logout</button>
   </div>
 </ng-template>
