--- a/rs-shop-app/src/app/goods/components/sales-goods/sales-goods.component.scss
+++ b/rs-shop-app/src/app/goods/components/sales-goods/sales-goods.component.scss
@@ -112,8 +112,18 @@
       .btn {
         width: 80%;
         background: linear-gradient(to right, rgb(255, 60, 0), rgb(255, 166, 0));
+        cursor: pointer;
 
+        &.addedToCart,
         &:hover {
+          background: linear-gradient(to right, rgb(99, 96, 96), rgb(187, 187, 186));
+          border: 1px solid gray;
+        }
+
+        &.addedToCart {
+          &:hover {
+            cursor: default;
+          }
         }
       }
 
