--- a/rs-shop-app/src/app/goods/components/sales-goods/sales-goods.component.html
+++ b/rs-shop-app/src/app/goods/components/sales-goods/sales-goods.component.html
@@ -124,7 +124,9 @@
     </div>
 
     <div class="btns-cont">
-      <button type="button" class="btn btn-danger basket-btn">В корзину</button>
+      <button type="button" class="btn btn-danger basket-btn" #toCart
+        [ngClass]="{'addedToCart': findInCartList(item.id)}" (click)="addToCartFunc(item.id, toCart)">В
+        корзину</button>
       <!-- <div class="favorite" (click)="addToFavoriteFunc($event, item.isFavorite)"> -->
       <div class="favorite">
         <svg height="45px" style="enable-background:new 0 0 140 130;" version="1.1" viewBox="0 0 140 130" width="45px"
