feat: start cart pae

--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.html
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.html
@@ -39,7 +39,7 @@
       </ul>
     </div>
 
-    <div class="basket nav-item">
+    <div class="basket nav-item" [routerLink]="['/cart']">
       <div class="logo">
         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
           x="0px" y="0px" width="20px" height="20px" viewBox="0 0 485.213 485.212"
