--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.html
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.html
@@ -1,7 +1,66 @@
 <div class="nav-cont">
   <div class="nav">
-    <div class="logo">
-      здесь будет лого
+    <div class="logo main-logo" [routerLink]="['/']">
+      <svg enable-background="new 0 0 64 64" id="Layer_1" version="1.1" viewBox="0 0 64 64" xml:space="preserve"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g>
+          <g>
+            <path d="M0,12.564v31.8h39.752v-31.8C39.752,12.564,0,12.564,0,12.564z" fill="#E21B1B" />
+          </g>
+        </g>
+        <g>
+          <g>
+            <g>
+              <g>
+                <path
+                  d="M29.823,40.218c-3.128,0-5.666,2.513-5.666,5.609s2.538,5.609,5.666,5.609s5.666-2.513,5.666-5.609      S32.95,40.218,29.823,40.218L29.823,40.218z" />
+              </g>
+            </g>
+          </g>
+          <g>
+            <g>
+              <g>
+                <path
+                  d="M9.93,40.218c-3.128,0-5.666,2.513-5.666,5.609s2.538,5.609,5.666,5.609s5.666-2.513,5.666-5.609      S13.058,40.218,9.93,40.218L9.93,40.218z" />
+              </g>
+            </g>
+          </g>
+        </g>
+        <g>
+          <g>
+            <path d="M64,44.384V31.411l-8.528-11.318h-9.643v24.271L64,44.384z" fill="#E21B1B" />
+          </g>
+        </g>
+        <g>
+          <g>
+            <g>
+              <path
+                d="M54.914,40.218c-3.128,0-5.666,2.513-5.666,5.609s2.538,5.609,5.666,5.609s5.666-2.513,5.666-5.609     S58.042,40.218,54.914,40.218L54.914,40.218z" />
+            </g>
+          </g>
+        </g>
+        <g>
+          <g>
+            <path
+              d="M7.061,23.45h5.387l-0.327,1.678h-3.41l-0.422,2.154h3.205l-0.328,1.665H7.975L7.28,32.643H5.315    L7.061,23.45z"
+              fill="#FFFFFF" />
+          </g>
+          <g>
+            <path
+              d="M14.007,30.256l-1.092,2.386h-2.086l4.473-9.192h2.523l1.079,9.192h-2.06l-0.191-2.386    C16.652,30.256,14.007,30.256,14.007,30.256z M16.571,28.756l-0.177-1.978c-0.041-0.504-0.095-1.241-0.136-1.8H16.23    c-0.233,0.558-0.492,1.268-0.738,1.8l-0.914,1.978H16.571z"
+              fill="#FFFFFF" />
+          </g>
+          <g>
+            <path
+              d="M20.298,30.515c0.545,0.328,1.322,0.586,2.167,0.586c0.764,0,1.46-0.354,1.46-1.077    c0-0.518-0.395-0.859-1.24-1.296c-0.982-0.532-1.91-1.24-1.91-2.441c0-1.855,1.624-2.987,3.628-2.987    c1.118,0,1.773,0.246,2.168,0.464l-0.614,1.637c-0.3-0.164-0.953-0.423-1.718-0.41c-0.914,0-1.391,0.464-1.391,0.968    c0,0.532,0.559,0.859,1.337,1.296c1.118,0.586,1.827,1.336,1.827,2.427c0,2.045-1.691,3.096-3.736,3.096    c-1.281,0-2.195-0.328-2.631-0.656L20.298,30.515z"
+              fill="#FFFFFF" />
+          </g>
+          <g>
+            <path d="M29.942,25.17h-2.427l0.341-1.719h6.833l-0.328,1.719h-2.455l-1.404,7.473h-1.963L29.942,25.17z"
+              fill="#FFFFFF" />
+          </g>
+        </g>
+      </svg>
     </div>
     <div class="catalog nav-item" [routerLink]="['/catalog']">
       <div class="logo">
