--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.scss
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.scss
@@ -10,6 +10,21 @@
     .logo {
       width: 15%;
       height: 50px;
+
+      &.main-logo {
+        cursor: pointer;
+
+        width: 100px;
+        height: 70px;
+
+        margin-top: -18px;
+        margin-bottom: 0;
+
+        svg {
+          width: auto;
+          height: 100%;
+        }
+      }
     }
 
     .catalog {
