--- a/rs-shop-app/src/app/app.component.html
+++ b/rs-shop-app/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header-template></app-header-template>
 <router-outlet></router-outlet>
 <app-register></app-register>
+<app-footer-template></app-footer-template>
