feat: add login guard

--- a/rs-shop-app/src/app/app.component.html
+++ b/rs-shop-app/src/app/app.component.html
@@ -2,3 +2,4 @@
 <router-outlet></router-outlet>
 <app-register></app-register>
 <app-footer-template></app-footer-template>
+<app-login-warn></app-login-warn>
