--- a/rs-shop-app/src/app/auth/components/login/login.component.html
+++ b/rs-shop-app/src/app/auth/components/login/login.component.html
@@ -2,14 +2,18 @@
 <ng-template #notLogged>
   <div class="form-cont">
     <h3 class="title">Login</h3>
-    <div class="form-group form-input">
-      <input type="text" class="form-control" placeholder="Login" #login>
+    <div class="wrong-data">Не верный пароль / логин </div>
+    <div class="form-group form-input" #login>
+      <input type="text" class="form-control" placeholder="Login">
     </div>
-    <div class="form-group form-input">
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" #password>
+    <div class="form-group form-input" #password>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-primary login-btn" (click)="loginFunc(login, password)">Login</button>
-    <button class="btn btn-link register-btn" (click)="openRegisterWindow()">Зарегестрироваться</button>
+    <div class="btn-cont">
+      <button type="submit" class="btn btn-primary login-btn" (click)="loginFunc(login, password)">Login</button>
+      <button type="submit" class="btn btn-primary reset-btn" (click)="resetFunc()">Reset</button>
+    </div>
+    <button class="btn btn-link register-btn" (click)="openRegisterWindow()">Зарегистрироваться</button>
   </div>
 </ng-template>
 <ng-template #logged>
