--- a/rs-shop-app/src/app/auth/components/register/register.component.html
+++ b/rs-shop-app/src/app/auth/components/register/register.component.html
@@ -31,8 +31,8 @@
         </div>
         <div class="form-input">
           <label for="validationDefault02">Last name</label>
-          <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" placeholder="Otto"
-            required #lastName>
+          <input type="text" required class="form-control" id="validationDefault02" placeholder="Last name"
+            placeholder="Otto" required #lastName>
         </div>
       </div>
 
@@ -42,17 +42,20 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroupPrepend2">@</span>
           </div>
-          <input type="text" class="form-control" id="validationDefaultUsername" placeholder="Username"
+          <input type="text" class="form-control" required id="validationDefaultUsername" placeholder="Username"
             aria-describedby="inputGroupPrepend2" required #login>
         </div>
       </div>
+      <div class="same-pass">Пароли не совпадают</div>
       <div class="form-group form-input">
         <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" #password>
+        <input type="password" class="form-control" required id="exampleInputPassword1" placeholder="Password"
+          #password>
       </div>
       <div class="form-group form-input">
         <label for="exampleInputPassword1">Confirmation</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirmation" #confirmation>
+        <input type="password" class="form-control" required id="exampleInputPassword1" placeholder="Confirmation"
+          #confirmation>
       </div>
     </div>
     <button class="btn btn-primary btn login-btn" type="submit"
