--- a/rs-shop-app/src/app/goods/components/main-page/main-page.component.html
+++ b/rs-shop-app/src/app/goods/components/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <main class="main">
 
-  <div class="carouser-cont">
+  <div class="carousel-cont">
     <h2 class="title">Sales</h2>
     <div class="carousel slide sales-carousel" data-ride="carousel">
       <div class="sales">
