--- a/rs-shop-app/src/app/users-goods/components/cart/cart.component.html
+++ b/rs-shop-app/src/app/users-goods/components/cart/cart.component.html
@@ -5,9 +5,9 @@
     <thead>
       <tr>
         <th>Товар</th>
-        <th>Описание товара</th>
+        <th class="th-description">Описание товара</th>
         <th>Количество</th>
-        <th>Доставка</th>
+        <th class="th-delivery">Доставка</th>
         <th>Стоимость</th>
       </tr>
     </thead>
