--- a/rs-shop-app/src/app/core/footer/components/footer-template/footer-template.component.html
+++ b/rs-shop-app/src/app/core/footer/components/footer-template/footer-template.component.html
@@ -1,12 +1,12 @@
 <footer class="footer">
   <ul class='contacts'>
-    <li><a href="tel:+74951234567">+375 29 302 10 21</a></li>
-    <li><a href="tel:+375255021021">+375 25 502 10 21</a></li>
-    <li><a href="tel:+375173021021">+375 17 302 10 21</a></li>
-    <li><a href="http://t.me/e21vekbot">Telegram</a></li>
-    <li><a href="#">Почта</a></li>
-    <li><a href="#">Заказать звонок</a></li>
-    <li><a href="#">Написать нам</a></li>
+    <li class="contacts-item"><a href="tel:+74951234567">+375 29 302 10 21</a></li>
+    <li class="contacts-item"><a href="tel:+375255021021">+375 25 502 10 21</a></li>
+    <li class="contacts-item"><a href="tel:+375173021021">+375 17 302 10 21</a></li>
+    <li class="contacts-item"><a href="http://t.me/e21vekbot">Telegram</a></li>
+    <li class="contacts-item"><a href="#">Почта</a></li>
+    <li class="contacts-item"><a href="#">Заказать звонок</a></li>
+    <li class="contacts-item"><a href="#">Написать нам</a></li>
   </ul>
 
   <ul class="socials">
