--- a/rs-shop-app/src/app/core/footer/components/footer-template/footer-template.component.scss
+++ b/rs-shop-app/src/app/core/footer/components/footer-template/footer-template.component.scss
@@ -6,12 +6,17 @@
   .contacts {
     justify-content: space-between;
     display: flex;
+    flex-wrap: wrap;
 
     border-top: 2px solid orange;
     padding: 10px;
+    margin-right: 5px;
 
-    li {
+    .contacts-item {
       list-style: none;
+      min-width: 140px;
+      text-align: center;
+      margin-bottom: 20px;
       a {
         text-decoration: none;
         color: black;
@@ -28,7 +33,8 @@
   .socials {
     width: 40%;
     max-width: 500px;
-    margin: 20px auto;
+    min-width: 200px;
+    margin: 0 auto 20px auto;
 
     border-top: 2px solid orange;
     padding: 10px 3%;
@@ -56,6 +62,24 @@
       &:hover {
         cursor: pointer;
         border: 2px solid orange;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1020px) {
+  .footer {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .footer {
+    .socials {
+      flex-direction: column;
+
+      .socials-item {
+        margin: 0 auto;
       }
     }
   }
