--- a/rs-shop-app/src/app/core/header/components/nav/nav.component.scss
+++ b/rs-shop-app/src/app/core/header/components/nav/nav.component.scss
@@ -97,3 +97,12 @@
     }
   }
 }
+
+@media screen and (max-width: 660px) {
+  .main-logo {
+    width: 50px !important;
+    height: 50px !important;
+
+    margin-top: -10px !important;
+  }
+}
