feat: add btn to cart to details page

--- a/rs-shop-app/src/app/goods/components/goods-details/goods-details.component.html
+++ b/rs-shop-app/src/app/goods/components/goods-details/goods-details.component.html
@@ -58,6 +58,42 @@
     </div>
   </div>
 
+  <div class="btns-cont">
+    <button type="button" class="btn btn-danger basket-btn" #toCart
+      [ngClass]="{'addedToCart': findInCartList(details.detailsData.id)}"
+      (click)="addToCartFunc(details.detailsData.id, toCart)">В
+      корзину</button>
+    <!-- <div class="favorite" (click)="addToFavoriteFunc($event, item.isFavorite)"> -->
+    <div class="favorite">
+      <svg height="45px" style="enable-background:new 0 0 140 130;" version="1.1" viewBox="0 0 140 130" width="45px"
+        xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <style type="text/css">
+          .st0 {
+            fill: #EF3E42;
+          }
+
+          .st1 {
+            fill: #FFFFFF;
+          }
+
+          .st2 {
+            fill: none;
+          }
+
+          .st3 {
+            fill-rule: evenodd;
+            clip-rule: evenodd;
+            fill: #FFFFFF;
+          }
+        </style>
+        <defs />
+        <path
+          d="M72.2,122.6C86.3,99.2,97,93.9,118.9,77.9c19.2-14.2,19.2-36.9,8.1-50.5C112.6,10.1,84,11.3,72.2,33.2  c-11.8-21.9-40.3-23.2-54.7-5.8C6.4,41,6.4,63.7,25.6,77.9C47.5,93.9,58.2,99.2,72.2,122.6L72.2,122.6L72.2,122.6z" />
+        <rect class="st2" height="130" id="_x3C_Slice_x3E__100_" width="140" />
+      </svg>
+    </div>
+  </div>
+
   <div class="description">
     <span class="description-title">О товаре:</span>
     {{details.detailsData.description}}
