--- a/rs-shop-app/src/app/goods/components/goods-details/goods-details.component.scss
+++ b/rs-shop-app/src/app/goods/components/goods-details/goods-details.component.scss
@@ -15,7 +15,7 @@
   .description {
     position: relative;
     width: 100%;
-    margin-top: 45px;
+    margin-top: 140px;
     border-top: 2px solid rgb(255, 136, 0);
     padding: 5px 20px;
 
@@ -31,7 +31,7 @@
 
   .slider-cont {
     position: relative;
-    margin: 60px 0 100px 0;
+    margin: 60px 0;
 
     display: flex;
 
@@ -132,6 +132,45 @@
       }
       .item img {
         width: 100%;
+      }
+    }
+  }
+
+  .btns-cont {
+    position: absolute;
+    width: 87%;
+    right: 0;
+    top: 500px;
+
+    display: flex;
+    justify-content: flex-end;
+
+    .btn {
+      width: 80%;
+      background: linear-gradient(to right, rgb(255, 60, 0), rgb(255, 166, 0));
+
+      &.addedToCart,
+      &:hover {
+        background: linear-gradient(to right, rgb(99, 96, 96), rgb(187, 187, 186));
+        border: 1px solid gray;
+      }
+
+      &.addedToCart {
+        &:hover {
+          cursor: default;
+        }
+      }
+    }
+
+    .favorite {
+      border: 1px solid red;
+      border-radius: 5px;
+      fill: gray;
+
+      &:hover,
+      &.addedToFavorite {
+        fill: red;
+        cursor: pointer;
       }
     }
   }
